@@ -1,6 +1,8 @@
 todoyu assets extension changelog
 
 assets 1.3.0 - not released yet
+	* Added: Show comment assets in tab
+	* Added: Check delete right for comment assets
 	* Added: Check see rights for comment assets
 	* Added: Possibility to add comment assets
 	* Added: Added record selector with dropdown instead of autocompleter
